# podman-compose

./: .codespellignore  .codespellrc  .coveragerc  .editorconfig  .flake8rc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  asyncstreamreader.py  main.py  podman-compose.py  podman_compose.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_volumes.py
.github/: PULL_REQUEST_TEMPLATE.md
compose/: __init__.py  app.py
docs/: Changelog-1.1.0.md  Changelog-1.2.0.md  Changelog-1.3.0.md  Changelog-1.4.0.md  Changelog-1.4.1.md  Changelog-1.5.0.md  Changelog-1.6.0.md  Extensions.md  Mappings.md  podman-compose.1
newsfragments/: 1039-fix-port-command.bugfix  1125.bugfix  1152-config-quiet.feature  1163.bugfix  1165-PROJECT_NAME-interpolation.bugfix  1165-project-name-evaluation-order.bugfix  1176.bugfix  1178.bugfix  1182-implement-pids-limit.feature  1183.bugfix  127-fix-git-build-url-context.bugfix  1473.feature  267.bugfix  398.bugfix  978.bugfix  README.txt  abort-on-container-failure.feature  abort_on_container_exit_stop_containers.bugfix  activate_profiles_of_given_services.bugfix  add-rmi-argument.feature  add-start_interval-in-healthcheck.misc  add-subpath-support-to-volumes-in---mount-option.bugfix  add-volumes-bind-create-host-path-option.bugfix  add_cp_command.feature  add_logs_colors.bugfix  add_logs_no_color_flag.bugfix  add_ls_command.feature  added_--no-hosts.feature  added_--wait_and_--wait-timeout.feature  allow-glob-volume-definition.feature  allow_multiple_env_file_flags.feature  build-labels.feature  build-platform.feature  build-ssh.feature  cache-fields-support.feature  cgroup-conf-configuration.feature  check-if-pod-exists.bugfix  check_dep_conditions_asyncio_gather.change  clean_error_on_missing_required_variable.change  compose-systemd-unregister.feature  (+98 more)
podman_compose/: classes.py  helpers.py  podman_compose.py
pytests/: conftest.py  test_can_merge_build.py  test_can_merge_cmd_ent.py  test_cases.py  test_compose_exec_args.py  test_compose_run_update_container_from_args.py  test_container_to_args.py  test_container_to_args_secrets.py  test_dependencies.py  test_get_net_args.py  test_is_list_of_str.py  test_network_create_args.py  test_normalize_depends_on.py  test_normalize_final_build.py  test_normalize_service.py  test_rec_merge_one_build.py  test_rec_merge_one_cmd_ent.py  test_recursive_parsing.py  test_volumes.py
scripts/: Changelog-template.jinja  clean_up.sh  download_and_build_podman-compose.sh  generate_binary_using_dockerfile.sh  make_release.sh  make_release_notes.sh  make_release_upload.sh  uninstall.sh
src/: _podman_compose.py  classes.py
tests/: .pylintrc  __init__.py  conftest.py  test_podman_compose.py  test_podman_compose_build_secrets.py  test_podman_compose_config.py  test_podman_compose_in_pod.py  test_podman_compose_include.py  test_podman_compose_networks.py  test_podman_compose_tests.py  test_podman_compose_up_down.py  test_utils.py  utils.py
tests/.@/: README.md
(+457 files in other folders)
