[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "podman-compose"
authors = [
    { email = "alsadi@gmail.com", name = "Muayyad Alsadi" },
]
description = "A script to run docker-compose.yml using podman"
dependencies = [
    "python-dotenv",
    "pyyaml",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
keywords = [
    "podman",
    "podman-compose",
]
license = "GPL-2.0-only"
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/containers/podman-compose"

[project.optional-dependencies]
devel = [
    "coverage",
    "parameterized",
    "pre-commit",
    "ruff",
]

[project.scripts]
podman-compose = "podman_compose:main"

[tool.setuptools]
py-modules = ["podman_compose"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "podman_compose.__version__"}

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["W", "E", "F", "I"]
ignore = [
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
preview = true # needed for quote-style
quote-style = "preserve"

[tool.towncrier]
    package = "podman_compose"
    package_dir = "master"
    directory = "newsfragments"
    filename = "docs/Changelog-new.md"
    template = "scripts/Changelog-template.jinja"
    title_format = "Version {version} ({project_date})"
    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "change"
        name = "Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = true

[tool.mypy]
python_version = "3.9"
namespace_packages = true
explicit_package_bases = true
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
exclude = "build"

[[tool.mypy.overrides]]
module = [
    "parameterized.*",
]
ignore_missing_imports = true
